--- a/pages/mine/index.wxss
+++ b/pages/mine/index.wxss
@@ -1,1 +1,17 @@
 /* pages/mine/index.wxss */
+.bg{
+  position: absolute;
+  width: 100%;
+  height: 330rpx;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  background: var(--primary-color);
+}
+.progress{
+  padding: var(--xs) var(--sm);
+  background-color: #fff;
+  border-radius: var(--md) var(--md) var(--md) 0;
+  font-size: small;
+  color: var(--primary-color);
+}
